tests/baselines/reference/privateNamesAndStaticFields.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticFields.ts(2,5): error TS18019: 'static' modifier cannot be used with a private-named property.
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticFields.ts(9,5): error TS18019: 'static' modifier cannot be used with a private-named property.


==== tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticFields.ts (2 errors) ====
    class A {
        static #foo: number;
        ~~~~~~
!!! error TS18019: 'static' modifier cannot be used with a private-named property.
        constructor () {
            A.#foo = 3;
        }
    }
    
    class B extends A {
        static #foo: string;
        ~~~~~~
!!! error TS18019: 'static' modifier cannot be used with a private-named property.
        constructor () {
            super();
            B.#foo = "some string";
        }
    }
    